Implementação diretivas ICMS + inicio testes

--- a/app/views/calculoicms_view.html
+++ b/app/views/calculoicms_view.html
@@ -11,187 +11,7 @@
             <button type="button" id="btnVoltar" class="btn btn btn-default btn-lg btn-block" ng-click="controlicms.voltar()">Voltar</button>
         </div>
     </div>
-
     <div icms-proprio-modal-opener></div>
-
-    <!-- Red. Base ICMS Modal Início -->
-            <div class="container">
-                <div id="icmsRedModal" class="modal fade" role="dialog" tabindex="-1">
-                    <div class="modal-dialog modal-grande">
-                        <div class="modal-content">
-                            <div class="modal-header alt-cor-principal">
-                                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                <h4 class="modal-title">ICMS com base Reduzida</h4>
-                            </div>
-                            <div class="modal-body alt-overflow-hidden">
-                                <form name="icmsRedForm">
-                                    <div class="col-sm-4 col-xs-12">
-                                        <div class="form-group" ng-class="{'has-error': !controlicms.valoresIcmsBaseRed.validacaoBase(), 'has-success':controlicms.valoresIcmsBaseRed.validacaoBase()}">
-                                           <label class="help-block" for="lbBaseIcmsRed">Base de Calculo</label>
-                                           <input id="baseIcmsRed" type="number" ng-model="controlicms.valoresIcmsBaseRed.base" class="form-control" required>
-                                           <span id="spanBaseIcmsRed" class="help-block msg" ng-show="!controlicms.valoresIcmsBaseRed.validacaoBase()">Valor inválido!</span>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-4 col-xs-12">
-                                        <div class="form-group" ng-class="{'has-error': !controlicms.valoresIcmsBaseRed.validacaoAliquotaNaoAceitaZero(controlicms.valoresIcmsBaseRed.aliquota), 'has-success':controlicms.valoresIcmsBaseRed.validacaoAliquotaNaoAceitaZero(controlicms.valoresIcmsBaseRed.aliquota)}">
-                                            <label class="help-block" for="lbAliquotaIcms">Alíquota ICMS</label>
-                                            <div class="input-group">
-                                                <input id="aliqIcmsRed" type="number" ng-model="controlicms.valoresIcmsBaseRed.aliquota" class="form-control" name="aliquotaIcms" required>
-                                                <span class="input-group-addon" id="percent-addon">%</span>
-                                            </div>
-                                            <span id="spanAliqIcmsRed" class="help-block msg" ng-show="!controlicms.valoresIcmsBaseRed.validacaoAliquotaNaoAceitaZero(controlicms.valoresIcmsBaseRed.aliquota)">Valor inválido!</span>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-4 col-xs-12">
-                                        <div class="form-group" ng-class="{'has-error': !controlicms.valoresIcmsBaseRed.validacaoAliquotaNaoAceitaZero(controlicms.valoresIcmsBaseRed.aliquotaRed), 'has-success':controlicms.valoresIcmsBaseRed.validacaoAliquotaNaoAceitaZero(controlicms.valoresIcmsBaseRed.aliquotaRed)}">
-                                            <label class="help-block" for="lbAliquotaIcmsReduzida">Redução</label>
-                                            <div class="input-group">
-                                                <input id="aliqRed" type="number" ng-model="controlicms.valoresIcmsBaseRed.aliquotaRed" class="form-control" name="aliquotaIcmsReduzida" required>
-                                                <span class="input-group-addon" id="percent-addon">%</span>
-                                            </div>
-                                            <span id="spanAliqRed" class="help-block msg" ng-show="!controlicms.valoresIcmsBaseRed.validacaoAliquotaNaoAceitaZero(controlicms.valoresIcmsBaseRed.aliquotaRed)">Valor inválido!</span>
-                                        </div>
-                                    </div>
-                                    <div class="col-xs-12">
-                                        <div class="form-group">
-                                            <button id="btnIcmsRed" type="button" class="btn btn-nmain btn-block" ng-click="controlicms.valoresIcmsBaseRed.calcular()" ng-disabled="!controlicms.valoresIcmsBaseRed.isValid()">Calcular</button>
-                                        </div>
-                                        <a id="discrimIcmsRed" title="Discriminação" data-toggle="collapse" data-target="#discriminacaoRed" class="fa fa-question-circle-o pull-right help-discriminacao"></a>
-                                        <label class="help-block" for="lbValorIcmsRed">Valor ICMS</label>
-                                        <pre id="resultIcmsRed" ng-bind="controlicms.valoresIcmsBaseRed.valor | currency"></pre>
-                                    </div>
-                                    <div class="col-xs-12">
-                                        <div id="discriminacaoRed" class="collapse">
-                                            <div class="panel panel-primary">
-                                                <div class="panel-heading">Discriminação Calculo
-                                                    <button type="button" class="close" data-toggle="collapse" data-target="#discriminacaoRed">&times;</button>
-                                                </div>
-                                                <div class="panel-body">
-                                                    <center>
-                                                    <h6>(Base de calculo - (Al de redução/100)) * (Alíquota de ICMS)/100 = (Valor do ICMS Red.)<h6>
-                                                    <h5>{{controlicms.valoresIcmsBaseRed.base | currency: 'R$':3}} - ({{controlicms.valoresIcmsBaseRed.aliquota}}/100) * {{controlicms.valoresIcmsBaseRed.aliquotaRed}}/100 = {{controlicms.valoresIcmsBaseRed.valorDiscriminacao | currency: 'R$':3}}<h5>
-                                                    </center>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                            <div class="modal-footer">
-                                <a id="btnLimparIcmsRed" type="button" class="btn btn btn-default" ng-click="controlicms.limparRed()">Limpar</a>
-                                <a id="btnFecharModalIcmsRed" type="button" class="btn btn btn-default" data-dismiss="modal">Fechar</a>
-                            </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-    <!-- Red. Base ICMS Modal Final -->
-
-    <!-- ICMS DIFAL Modal Início -->
-        <div class="container">
-            <div id="icmsDifalModal" class="modal fade" role="dialog" tabindex="-1">
-                <div class="modal-dialog modal-grande">
-                    <div class="modal-content">
-                        <div class="modal-header alt-cor-principal">
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title">ICMS Difal</h4>
-                        </div>
-                        <div class="modal-body alt-overflow-hidden">
-                            <form name="icmsDifalForm">
-                                <div class="col-sm-6 col-xs-12">
-                                    <div class="form-group" ng-class="{'has-error': !controlicms.valoresIcmsDifal.validacaoBaseAno(controlicms.valoresIcmsDifal.ano), 'has-success':controlicms.valoresIcmsDifal.validacaoBaseAno(controlicms.valoresIcmsDifal.ano)}">
-                                        <label class="help-block" for="lbAnoIcmsDifal">Ano da Nota</label>
-                                        <input id="anoNotaDifal" type="number" ng-model="controlicms.valoresIcmsDifal.ano" class="form-control" name="anoIcmsDifal" required>
-                                        <span id="spanAnoNotaDifal" class="help-block msg" ng-show="!controlicms.valoresIcmsDifal.validacaoBaseAno(controlicms.valoresIcmsDifal.ano)">Valor inválido!</span>
-                                    </div>
-                                </div>
-                                <div class="col-sm-6 col-xs-12">
-                                    <div class="form-group" ng-class="{'has-error': !controlicms.valoresIcmsDifal.validacaoBaseAno(controlicms.valoresIcmsDifal.base), 'has-success':controlicms.valoresIcmsDifal.validacaoBaseAno(controlicms.valoresIcmsDifal.base)}">
-                                        <label class="help-block" for="lbBaseIcmsDifal">Base de Calculo</label>
-                                        <input id="baseIcmsDifal" type="number" ng-model="controlicms.valoresIcmsDifal.base" class="form-control" name="baseIcmsDifal">
-                                        <span id="spanBaseIcmsDifal" class="help-block msg" ng-show="!controlicms.valoresIcmsDifal.validacaoBaseAno(controlicms.valoresIcmsDifal.base)">Valor inválido!</span>
-                                    </div>
-                                </div>
-                                <div class="col-sm-4 col-xs-12">
-                                    <div class="form-group" ng-class="{'has-error': !controlicms.valoresIcmsDifal.validacaoAliquotaNaoAceitaZero(controlicms.valoresIcmsDifal.aliquotaInterna), 'has-success':controlicms.valoresIcmsDifal.validacaoAliquotaNaoAceitaZero(controlicms.valoresIcmsDifal.aliquotaInterna)}">
-                                        <label class="help-block" for="lbAliquotaInter">Alíq. Interna</label>
-                                            <div class="input-group">
-                                                <input id="aliqInternaDifal" type="number" ng-model="controlicms.valoresIcmsDifal.aliquotaInterna" class="form-control" name="aliquotaIcmsInterna" required>
-                                                <span class="input-group-addon" id="percent-addon">%</span>
-                                            </div>
-                                        <span id="spanAliqInternaDifal" class="help-block msg" ng-show="!controlicms.valoresIcmsDifal.validacaoAliquotaNaoAceitaZero(controlicms.valoresIcmsDifal.aliquotaInterna)">Valor inválido!</span>
-                                    </div>
-                                </div>
-                                <div class="col-sm-4 col-xs-12">
-                                    <div class="form-group" ng-class="{'has-error': !controlicms.valoresIcmsDifal.validacaoAliquotaNaoAceitaZero(controlicms.valoresIcmsDifal.aliquotaInterestadual) || !controlicms.valoresIcmsDifal.validacaoAliquotaInternaMaiorInterest(), 'has-success':controlicms.valoresIcmsDifal.validacaoAliquotaNaoAceitaZero(controlicms.valoresIcmsDifal.aliquotaInterestadual)}">
-                                        <label class="help-block" for="lbAliquitaInterest">Alíq. Interestad.</label>
-                                            <div class="input-group">
-                                                <input id="aliqInterestDifal" type="number" ng-model="controlicms.valoresIcmsDifal.aliquotaInterestadual" class="form-control" name="aliquotaIcmsInterestadual" required>
-                                                <span class="input-group-addon" id="percent-addon">%</span>
-                                            </div>
-                                        <span id="spanAliqInterestDifal" class="help-block msg" ng-show="!controlicms.valoresIcmsDifal.validacaoAliquotaNaoAceitaZero(controlicms.valoresIcmsDifal.aliquotaInterestadual) || !controlicms.valoresIcmsDifal.validacaoAliquotaInternaMaiorInterest()">Valor inválido!</span>
-                                    </div>
-                                </div>
-                                <div class="col-sm-4 col-xs-12">
-                                    <div class="form-group"  ng-class="{'has-error': !controlicms.valoresIcmsDifal.validacaoAliquotaAceitaZero(), 'has-success':controlicms.valoresIcmsDifal.validacaoAliquotaAceitaZero()}">
-                                        <label class="help-block" for="lbFcp">Alíq. FCP</label>
-                                        <div class="input-group">
-                                            <input id="aliqFcpDifal" type="number" ng-model="controlicms.valoresIcmsDifal.aliquotaFcp" class="form-control" name="aliquotaFcp">
-                                            <span class="input-group-addon" id="percent-addon">%</span>
-                                        </div>
-                                        <span id="spanAliqFcpDifal" class="help-block msg" ng-show="!controlicms.valoresIcmsDifal.validacaoAliquotaAceitaZero()">Valor inválido!</span>
-                                    </div>
-                                </div>
-                                <div class="col-xs-12">
-                                    <div class="form-group">
-                                        <button id="btnIcmsDifal" type="button" class="btn btn-nmain btn-block" ng-click="controlicms.valoresIcmsDifal.calcular()" ng-disabled="!controlicms.valoresIcmsDifal.isValid()">Calcular</button>
-                                    </div>
-                                    <div class="col-sm-6 col-xs-12 alt-sem-padding-left">
-                                        <div class="form-group">
-                                            <label class="help-block" for="tbValorOrigem">Valor Origem</label>
-                                            <pre id="resultValorOrigem" ng-bind="controlicms.valoresIcmsDifal.valorOrigem | currency"></pre>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-6 col-xs-12 alt-sem-padding-right">
-                                        <div class="form-group">
-                                            <a id="discrimIcmsDifal" title="Discriminação" data-toggle="collapse" data-target="#discriminacaoDifal" class="fa fa-question-circle-o pull-right help-discriminacao"></a>
-                                            <label class="help-block" for="tbValorDestino">Valor Destino</label>
-                                            <pre id="resultValorDestino" ng-bind="controlicms.valoresIcmsDifal.valorDestino | currency"></pre>
-                                        </div>
-                                    </div>
-                                    <div class="col-xs-12">
-                                        <div id="discriminacaoDifal" class="collapse">
-                                            <div class="panel panel-primary">
-                                                <div class="panel-heading">Discriminação Calculo
-                                                    <button type="button" class="close" data-toggle="collapse" data-target="#discriminacaoDifal">&times;</button>
-                                                </div>
-                                                <div class="panel-body">
-                                                    <center>
-                                                        <h6>2016 = [Origem:60%/Destino:40%]</h6>
-                                                        <h6>2017 = [Origem:40%/Destino:60%]</h6>
-                                                        <h6>2018 = [Origem:20%/Destino:80%]</h6>
-                                                        <h6>2019 = [Origem:0%/Destino:100%]</h6>
-                                                        <h6>-</h6>
-                                                        <h6>(Base de ICMS) * (Al.Interna - Al.Interestad)/100 = (Valor Difal)</h6>
-                                                        <h5>{{controlicms.valoresIcmsDifal.base | currency: 'R$':3}} * ({{controlicms.valoresIcmsDifal.aliquotaInterna}}-{{controlicms.valoresIcmsDifal.aliquotaInterestadual}})/100 = {{controlicms.valoresIcmsDifal.valorDifal | currency: 'R$':3}}</h5>
-                                                        <h6>FCP somado ao Destino</h5>
-                                                        <h5>{{controlicms.valoresIcmsDifal.valorDestinoeFcp | currency: 'R$':3}} = {{controlicms.valoresIcmsDifal.valorDestino | currency: 'R$':3}} + {{controlicms.valoresIcmsDifal.valorFcp | currency: 'R$':3}}</h5>
-                                                    </center>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                            <div class="modal-footer">
-                                <button id="btnLimparIcmsDifal" type="button" class="btn btn btn-default" ng-click="controlicms.limparDifal()">Limpar</button>
-                                <button id="btnFecharModalIcmsDifal" type="button" class="btn btn btn-default" data-dismiss="modal">Fechar</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-    <!-- ICMS DIFAL Modal Final -->
+    <div icms-red-modal-opener></div>
+    <div icms-difal-modal-opener></div>
 </div>
